Updated design